--- a/dopc.rdoc
+++ b/dopc.rdoc
@@ -33,6 +33,37 @@ Display the program version
 
 
 === Commands
+==== Command: <tt>exec </tt>
+Manage plan executions
+
+
+===== Commands
+====== Command: <tt>list </tt>
+List all executions
+
+
+====== Command: <tt>new </tt>
+Execute a plan (deploy with DOPv and run with DOPi)
+
+
+======= Options
+======= -s|--stepset arg
+
+Stepset to run instead of the default
+
+[Default Value] None
+
+
+======= --[no-]dopi
+Enable/disable running plan with DOPi
+
+
+
+======= --[no-]dopv
+Enable/disable deploying plan with DOPv
+
+
+
 ==== Command: <tt>help  command</tt>
 Shows a list of commands or help for one command
 
@@ -70,18 +101,6 @@ Get a plan
 
 ====== Command: <tt>list </tt>
 List all plans
-
-
-====== Command: <tt>run  name</tt>
-Run a plan
-
-
-======= Options
-======= -s|--stepset stepset
-
-Run specific stepset from the plan, use default stepset if not specified
-
-[Default Value] None
 
 
 ====== Command: <tt>update  file</tt>
