fix arguments for exec new command

--- a/dopc.rdoc
+++ b/dopc.rdoc
@@ -1,4 +1,4 @@
-== dopc - CLI client for DOPc. For general errors the client will exit with 1. For an invalid plan file it exits with 65.
+== dopc - CLI client for DOPc. For general errors the client will exit with 1, for usage errors with 64.
 
 v0.0.1
 
@@ -46,7 +46,7 @@ Get an executions
 List all executions
 
 
-====== Command: <tt>new </tt>
+====== Command: <tt>new  <plan_name> <task_name> [<stepset>]</tt>
 Execute a plan (DOPv and DOPi). The task must be one of: setup (run and deploy), deploy, run, undeploy.
 
 
@@ -71,10 +71,6 @@ Manage plans
 ===== Commands
 ====== Command: <tt>add </tt>
 Add a plan from file
-
-
-====== Command: <tt>check </tt>
-Check a plan
 
 
 ====== Command: <tt>del </tt>
