--- a/dopc.rdoc
+++ b/dopc.rdoc
@@ -38,11 +38,18 @@ Manage plan executions
 
 
 ===== Commands
-====== Command: <tt>clear  <plan_name></tt>
+====== Command: <tt>clear </tt>
 Clear executions
 
 
 ======= Options
+======= -p|--plan arg
+
+Remove only executions of this plan
+
+[Default Value] None
+
+
 ======= -s|--status arg
 
 Executions with specified status(es) are removed
@@ -107,6 +114,16 @@ Get specific version of plan (if not specified then get latest version)
 
 ====== Command: <tt>list </tt>
 List all plans
+
+
+====== Command: <tt>reset </tt>
+Reset the state of a plan
+
+
+======= Options
+======= -f|--[no-]force
+Force state reset
+
 
 
 ====== Command: <tt>update </tt>
