--- a/dopc-client.rdoc
+++ b/dopc-client.rdoc
@@ -1,6 +1,6 @@
-== dopc - CLI client for DOPc. For general errors the client will exit with 1, for usage errors with 64.
+== dopc-client - CLI client for DOPc. For general errors the client will exit with 1, for usage errors with 64.
 
-v0.0.1
+v0.0.2
 
 === Global Options
 === -a|--api api
